# rust-inspector

./: CHANGELOG.rst  Makefile  README.rst  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docs-ci.yml  pypi-release.yml
src/rust_inspector/: __init__.py  binary.py  blint_binary.ABOUT  blint_binary.py  config.py  packages.py
tests/: test_binary.py  test_packages.py  test_plugin.py
tests/data/binary-with-deps/: cargo_dependencies-symbols.json
