[metadata]
name = rust-inspector
license = Apache-2.0 AND MIT
version = 0.2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = rust-inspector is a scancode plugin to extract symbols and dependencies found in Rust binaries.
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/rust-inspector

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst
    README.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

python_requires = >=3.10

install_requires =
    commoncode
    plugincode
    typecode
    lief==0.17.0
    symbolic==10.2.1

[options.entry_points]

scancode_scan =
    rust_symbol = rust_inspector.plugin:RustSymbolScannerPlugin

[options.extras_require]
testing =
    scancode-toolkit
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton
